apps/mail/network-policies/network-policy-bulwark.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bulwark-policy
  namespace: mail
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: bulwark
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mail
          podSelector:
            matchLabels:
              app.kubernetes.io/name: stalwart
      ports:
        - protocol: TCP
          port: 8080
