apps/mail/network-policies/network-policy-stalwart-http.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stalwart-http-policy
  namespace: mail
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: stalwart
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mail
          podSelector:
            matchLabels:
              app.kubernetes.io/name: bulwark
      ports:
        - protocol: TCP
          port: 8080
