apps/mail/network-policies/network-policy-stalwart-mail.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stalwart-mail-policy
  namespace: mail
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: stalwart
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/12
        - ipBlock:
            cidr: ::/0
            except:
              - 2001:db8:42::/64
              - 2001:db8:43::/112
              - fc00::/7
      ports:
        - protocol: TCP
          port: 25
        - protocol: TCP
          port: 465
        - protocol: TCP
          port: 587
        - protocol: TCP
          port: 993
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/12
        - ipBlock:
            cidr: ::/0
            except:
              - 2001:db8:42::/64
              - 2001:db8:43::/112
              - fc00::/7
      ports:
        - protocol: TCP
          port: 25
        - protocol: TCP
          port: 465
        - protocol: TCP
          port: 587
        - protocol: TCP
          port: 443
