apps/mail/network-policies/network-policy-stalwart.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stalwart-http-policy
  namespace: mail
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: stalwart
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mail
          podSelector:
            matchLabels:
              app.kubernetes.io/name: bulwark
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/12
        - ipBlock:
            cidr: ::/0
            except:
              - fc00::/7
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 25
        - protocol: TCP
          port: 465
        - protocol: TCP
          port: 587
        - protocol: TCP
          port: 993
